chore: some spacing and alignment issues

--- a/new-hinepal/src/app/globals.css
+++ b/new-hinepal/src/app/globals.css
@@ -181,3 +181,6 @@ body {
 .goog-te-gadget span {
   display: none !important;
 }
+/* *{
+  border: 1px solid red;
+} */
